# whisper-dockerized

./: Dockerfile  Dockerfile.gpu  README.md  modelloader.py  pyproject.toml
.github/workflows/: dockerhub.yml
testdata_librispeech/: 3660-172182-0016.txt  3660-6517-0030.txt  374-180298-0007
