[tool.poetry]
name = "whisper-dockerized"
version = "0.0.1"
description = "Dockerfiles to pack OpenAI's Whisper models in Docker/Singularity containers"
authors = [
    "Matthias Zepper"
]

[tool.poetry.dependencies]
python = "^3.9"
unidecode = "^1.3.4"
whisper = {git = "https://github.com/openai/whisper.git", rev="9f70a352f9f8630ab3aa0d06af5cb9532bd8c21d"}
tqdm = "^4.64.1"
transformers = "^4.22.1"
python-multipart = "^0.0.5"
ffmpeg-python = "^0.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
