[tool.poetry]
name = "whisper-dockerized"
version = "0.2.0"
description = "Dockerfiles to pack OpenAI's Whisper models in Docker/Singularity containers"
authors = [
    "Matthias Zepper"
]

[tool.poetry.dependencies]
python = "^3.9"
unidecode = "^1.3.4"
openai-whisper = {git = "https://github.com/openai/whisper.git", rev="fcfeaf1b61994c071bba62da47d7846933576ac9"}
tqdm = "^4.64.1"
transformers = "^4.22.1"
torch = ">=2.0.0, !=2.0.1, !=2.1.0"
python-multipart = "^0.0.5"
ffmpeg-python = "^0.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
